<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/gryffindor_team"
                android:textColor="@color/gryTitle"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:src="@drawable/gry" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/score_gry"
                android:textColor="@color/colorText"
                android:textSize="50sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"

                android:onClick="goalGry"
                android:text="@string/goal_button_gry" />

            <Button
                android:id="@+id/snitchGry"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="snitchGry"
                android:text="@string/snitch_button_gry" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shots_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:text="@string/fouls_gry"
                    android:textColor="@color/colorText"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/shots_textview"
                    android:paddingLeft="10dp"
                    android:text="@string/fouls_number_gry"

                    android:textColor="@color/colorText"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/fouls_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="24dp"
                    android:onClick="addFoulForGry"
                    android:text="+"

                    android:textSize="16sp" />
            </RelativeLayout>


        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="16sp"

            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/slytherin_team"
                android:textColor="@color/slyTitle"
                android:textSize="32sp"
                android:textStyle="bold"


                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:src="@drawable/sly" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/score_sly"
                android:textColor="@color/colorText"
                android:textSize="50sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="goalSly"
                android:text="@string/goal_button_sly" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="snitchSly"
                android:text="@string/snitch_button_sly" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fouls_textview_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:text="@string/fouls_sly"

                    android:textColor="@color/colorText"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/fouls_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/fouls_textview_2"
                    android:paddingLeft="10dp"
                    android:text="@string/fouls_number_sly"

                    android:textColor="@color/colorText"
                    android:textSize="22sp" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="24dp"
                    android:onClick="addFoulForSly"
                    android:text="+"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="startOver"
        android:text="@string/start_over_button" />

</RelativeLayout>
